--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 /test/version_tmp/
 /tmp/
 token.ini
+student.ini
+student_girl.ini
 
 # Used by dotenv library to load environment variables.
 # .env
